--- a/src/index.html
+++ b/src/index.html
@@ -90,8 +90,14 @@
             </div>
         </nav>
         <div class="feedback menu__block linkBlock">
-            <button class="feedback__item linkBlock__item linkBlock__item--white">Стать амбассадором</button>
-            <button class="feedback__item linkBlock__item linkBlock__item--red">Попробовать сквош</button>
+            <button data-modal="#order-ambassador"
+                    class="js-openModal feedback__item linkBlock__item linkBlock__item--white">Стать
+                амбассадором
+            </button>
+            <button data-modal="#try-squash" class="js-openModal feedback__item linkBlock__item linkBlock__item--red">
+                Попробовать
+                сквош
+            </button>
         </div>
     </div>
 </header>
@@ -308,8 +314,9 @@
                     data-slider="main-slider">&#11104;
             </button>
             <div class="slider__paginationContainer"></div>
-            <button class="slick-next paginationBlock__item"   data-slider="main-slider" aria-label="Next"
-                    type="button">&#10141;</button>
+            <button class="slick-next paginationBlock__item" data-slider="main-slider" aria-label="Next"
+                    type="button">&#10141;
+            </button>
         </div>
     </section>
     <section class="about">
@@ -372,11 +379,11 @@
                         <a href="#" class="linkBlock__item linkBlock__item--red">Следить за нами →</a>
                     </div>
                     <div class="instagram__paginationWrapper">
-                        <button class="slick-prev paginationBlock__item"   data-slider="insta-slider"
+                        <button class="slick-prev paginationBlock__item" data-slider="insta-slider"
                                 aria-label="Previous" type="button">&#11104;
                         </button>
                         <div class="instagram__pagination paginationBlock"></div>
-                        <button data-slider="insta-slider"  class="slick-next paginationBlock__item"
+                        <button data-slider="insta-slider" class="slick-next paginationBlock__item"
                                 aria-label="Next" type="button">&#10141;
                         </button>
                     </div>
@@ -391,13 +398,13 @@
         <div class="wrapper ambassadors__bg">
             <div class="ambassadors__title titleText">Амбассадоры</div>
             <div class="ambassadors__filter  filter">
-                <select class="ambassadors__select filter__select" name="country" size="1">
+                <select class="select ambassadors__select filter__select" name="country" size="1">
                     <option class="option filter__option ambassadors__option" selected>
                         Россия
                     </option>
                     <option class="option filter__option ambassadors__option">Украина</option>
                 </select>
-                <select class="ambassadors__select filter__select" name="city">
+                <select class="select ambassadors__select filter__select" name="city">
                     <option class="filter__option option">Выберите город</option>
                     <option class="filter__option option">Москва</option>
                     <option class="filter__option option">Санкт-Петербург</option>
@@ -426,9 +433,11 @@
                         </div>
                     </div>
                     <div class="ambassadors__linkBlock linkBlock">
-                        <a
-                                class="linkBlock__item linkBlock__item--red ambassadors__link ambassadors__link--wide">Попробовать
-                            сквош</a>
+                        <button data-modal="#try-squash"
+                                class="js-openModal linkBlock__item linkBlock__item--red ambassadors__link ambassadors__link--wide">
+                            Попробовать
+                            сквош
+                        </button>
                         <a class="linkBlock__item linkBlock__item--white ambassadors__link">Подробнее</a>
                     </div>
                 </div>
@@ -453,9 +462,11 @@
                         </div>
                     </div>
                     <div class="ambassadors__linkBlock linkBlock">
-                        <a
-                                class="linkBlock__item linkBlock__item--red ambassadors__link ambassadors__link--wide">Попробовать
-                            сквош</a>
+                        <button data-modal="#try-squash"
+                                class="js-openModal linkBlock__item linkBlock__item--red ambassadors__link ambassadors__link--wide">
+                            Попробовать
+                            сквош
+                        </button>
                         <a class="linkBlock__item linkBlock__item--white ambassadors__link">Подробнее</a>
                     </div>
                 </div>
@@ -480,9 +491,11 @@
                         </div>
                     </div>
                     <div class="ambassadors__linkBlock linkBlock">
-                        <a
-                                class="linkBlock__item linkBlock__item--red ambassadors__link ambassadors__link--wide">Попробовать
-                            сквош</a>
+                        <button data-modal="#try-squash"
+                                class="js-openModal linkBlock__item linkBlock__item--red ambassadors__link ambassadors__link--wide">
+                            Попробовать
+                            сквош
+                        </button>
                         <a class="linkBlock__item linkBlock__item--white ambassadors__link">Подробнее</a>
                     </div>
                 </div>
@@ -507,9 +520,11 @@
                         </div>
                     </div>
                     <div class="ambassadors__linkBlock linkBlock">
-                        <a
-                                class="linkBlock__item linkBlock__item--red ambassadors__link ambassadors__link--wide">Попробовать
-                            сквош</a>
+                        <button data-modal="#try-squash"
+                                class="js-openModal linkBlock__item linkBlock__item--red ambassadors__link ambassadors__link--wide">
+                            Попробовать
+                            сквош
+                        </button>
                         <a class="linkBlock__item linkBlock__item--white ambassadors__link">Подробнее</a>
                     </div>
                 </div>
@@ -534,9 +549,11 @@
                         </div>
                     </div>
                     <div class="ambassadors__linkBlock linkBlock">
-                        <a
-                                class="linkBlock__item linkBlock__item--red ambassadors__link ambassadors__link--wide">Попробовать
-                            сквош</a>
+                        <button data-modal="#try-squash"
+                                class="js-openModal linkBlock__item linkBlock__item--red ambassadors__link ambassadors__link--wide">
+                            Попробовать
+                            сквош
+                        </button>
                         <a class="linkBlock__item linkBlock__item--white ambassadors__link">Подробнее</a>
                     </div>
                 </div>
@@ -546,15 +563,15 @@
                     <a class="linkBlock__item linkBlock__item--white">Все амбассадоры &rarr;</a>
                 </div>
 
-                    <div class="ambassadors__paginationWrapper">
-                        <button class="slick-prev paginationBlock__item"   data-slider="ambassador-slider"
-                                aria-label="Previous" type="button">&#11104;
-                        </button>
-                        <div class="ambassadors__pagination paginationBlock"></div>
-                        <button data-slider="ambassador-slider"  class="slick-next paginationBlock__item"
-                                aria-label="Next" type="button">&#10141;
-                        </button>
-                    </div>
+                <div class="ambassadors__paginationWrapper">
+                    <button class="slick-prev paginationBlock__item" data-slider="ambassador-slider"
+                            aria-label="Previous" type="button">&#11104;
+                    </button>
+                    <div class="ambassadors__pagination paginationBlock"></div>
+                    <button data-slider="ambassador-slider" class="slick-next paginationBlock__item"
+                            aria-label="Next" type="button">&#10141;
+                    </button>
+                </div>
 
             </div>
         </div>
@@ -590,7 +607,9 @@
                     </div>
                     <div class="orderBlock__CTA orderCTA">
                         <div class="orderCTA__item linkBlock">
-                            <button class="linkBlock__item linkBlock__item--red orderCTA__link">Попробовать
+                            <button
+                                    data-modal="#try-squash"
+                                    class="js-openModal linkBlock__item linkBlock__item--red orderCTA__link">Попробовать
                                 сквош &rarr;
                             </button>
                         </div>
@@ -627,7 +646,11 @@
                     </div>
                     <div class="orderBlock__CTA orderCTA">
                         <div class="orderCTA__item linkBlock">
-                            <button class="linkBlock__item linkBlock__item--red orderCTA__link">Стать амбассадором
+                            <button
+                                    data-modal="#order-ambassador"
+                                    class="js-openModal linkBlock__item linkBlock__item--red
+                                    orderCTA__link">Стать
+                                амбассадором
                                 &rarr;
                             </button>
                         </div>
@@ -816,11 +839,11 @@
                     <a class="linkBlock__item linkBlock__item--white">Все статьи &rarr;</a>
                 </div>
                 <div class="articles__paginationWrapper">
-                    <button class="slick-prev paginationBlock__item"   data-slider="articles-slider"
+                    <button class="slick-prev paginationBlock__item" data-slider="articles-slider"
                             aria-label="Previous" type="button">&#11104;
                     </button>
                     <div class="articles__pagination paginationBlock"></div>
-                    <button data-slider="articles-slider"  class="slick-next paginationBlock__item"
+                    <button data-slider="articles-slider" class="slick-next paginationBlock__item"
                             aria-label="Next" type="button">&#10141;
                     </button>
                 </div>
@@ -937,11 +960,116 @@
     </footer>
     <section class="searchBox">
         <div class="searchBox__container">
-        <div class="searchBox__title">Поиск по сайту</div>
-        <div class="searchBox__inputWrapper"><input type="text" placeholder="Начните набирать" class="searchBox__input"></div>
+            <div class="searchBox__title">Поиск по сайту</div>
+            <div class="searchBox__inputWrapper"><input type="text" placeholder="Начните набирать"
+                                                        class="searchBox__input"></div>
         </div>
     </section>
-    <div class="darkenMask" style="display: none;"></div>
+
+    <form class="modalForm" id="order-ambassador" style="display: none;">
+        <div class="modalForm__close js-formClose">
+            <span></span>
+        </div>
+        <div class="modalForm__titleBlock">
+
+            <div class="modalForm__title">Стать амбассадором</div>
+            <div class="modalForm__selectBox">
+                <select name="country" class="select modalForm__select">
+                    <option value="Россия">Россия</option>
+                    <option value="Россия">Франция</option>
+                </select>
+                <select name="city" class="select modalForm__select">
+                    <option value="Россия">Москва</option>
+                    <option value="Россия">Новосибирск</option>
+                </select>
+            </div>
+        </div>
+        <div class="modalForm__fields">
+            <input type="text" class="modalForm__input" name="name" placeholder="ФИО">
+            <input type="tel" class="modalForm__input" name="phone" placeholder="Телефон">
+            <input type="email" class="modalForm__input" name="email" placeholder="Email">
+            <div class="modalForm__text">
+                Нажимая на кнопку, вы принимаете условия Политики конфиденциальности
+            </div>
+        </div>
+        <div class="modalForm__submitBlock linkBlock">
+            <button type="submit"
+                    class="js-submit modalForm__submit linkBlock__item linkBlock__item--red">Отправить заявку
+                &rarr;
+            </button>
+        </div>
+    </form>
+
+    <form class="modalForm" id="try-squash" style="display: none;">
+        <div class="modalForm__close js-formClose">
+            <span></span>
+        </div>
+        <div class="modalForm__titleBlock">
+
+            <div class="modalForm__title">Попробовать сквош</div>
+            <div class="modalForm__selectBox">
+                <select name="country" class="select modalForm__select">
+                    <option value="Россия">Россия</option>
+                    <option value="Россия">Франция</option>
+                </select>
+                <select name="city" class="select modalForm__select">
+                    <option value="Россия">Москва</option>
+                    <option value="Россия">Новосибирск</option>
+                </select>
+                <select name="city" class="select modalForm__select">
+                    <option value="">Выберите клуб</option>
+                    <option value="Россия">Сквош-клуб "Москва"</option>
+                    <option value="Россия">Сквош-клуб "Москва"</option>
+                </select>
+            </div>
+        </div>
+        <div class="modalForm__fields">
+            <input type="text" class="modalForm__input" name="name" placeholder="ФИО">
+            <input type="tel" class="modalForm__input" name="phone" placeholder="Телефон">
+            <input type="email" class="modalForm__input" name="email" placeholder="Email">
+            <div class="modalForm__text">
+                Нажимая на кнопку, вы принимаете условия Политики конфиденциальности
+            </div>
+        </div>
+        <div class="modalForm__submitBlock linkBlock">
+            <button type="submit" class="js-submit modalForm__submit linkBlock__item linkBlock__item--red">Отправить
+                заявку
+                &rarr;
+            </button>
+        </div>
+    </form>
+    <form class="modalForm" id="success" style="display: none;">
+        <div class="modalForm__close js-formClose">
+            <span></span>
+        </div>
+        <div class="modalForm__fields">
+            <h2>Заявка отправлена</h2>
+            Как только ваша заявка будет рассмотрена, мы свяжемся с вами
+        </div>
+    </form>
+
+    <form class="modalForm modalForm--insta" id="insta-modal" style="display: none">
+        <div class="modalForm__close js-formClose">
+            <span></span>
+        </div>
+        <div class="modalForm__left">
+            <img class="modalForm__img" src="./img/insta-modal.png">
+        </div>
+        <div class="modalForm__right">
+            <div class="modalForm__right__subTitle">
+                <img src="./img/socials/ig.png"> @squash4friends
+            </div>
+            <div class="modalForm__rightText">
+                <h2>Всё самое интересное — в Instagram</h2>
+                Подпишись на наш инстаграм, чтобы быть в курсе всех событий
+            </div>
+            <div class="modalForm__linkBlock linkBlock">
+                <a class="modalForm__link linkBlock__item  linkBlock__item--red" href="https://instagram.com">Следить за
+                    squash4friends</a>
+            </div>
+        </div>
+    </form>
 </main>
+<div class="darkenMask" style="display: none;"></div>
 </body>
 </html>
