--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,6 @@
     </div>
 </section>
 <header class="header">
-
     <div class="menu">
         <nav class="menu__block navigation nav">
             <div class="navigation__item navigation__item--red ">
@@ -74,7 +73,7 @@
                 </div>
             </div>
             <div class="navigation__item ">
-                <a class="navigation__link" href="#">Клубы</a>
+                <a class="navigation__link" href="/clubs.html">Клубы</a>
             </div>
             <div class="navigation__item ">
                 <a class="navigation__link" href="#">Амбассадоры</a>
@@ -614,7 +613,8 @@
                             </button>
                         </div>
                         <div class="orderCTA__item orderCTA__item--min linkBlock">
-                            <button class="linkBlock__item linkBlock__item--white orderCTA__link">Карта клубов</button>
+                            <a href="/clubs.html" class="linkBlock__item linkBlock__item--white orderCTA__link">Карта
+                                клубов</a>
                         </div>
                     </div>
                 </div>
@@ -874,7 +874,7 @@
                             </div>
                         </div>
                         <div class="navigation__item ">
-                            <a class="navigation__link navigation__link--white" href="#">Клубы</a>
+                            <a class="navigation__link navigation__link--white" href="/clubs.html">Клубы</a>
                         </div>
                         <div class="navigation__item ">
                             <a class="navigation__link navigation__link--white" href="#">Амбассадоры</a>
